# UTSA_embedded_systems

./: .gitignore
Mosquitto_Project/mosquitto-2.0.18/: milkv_duo.cmake
Mosquitto_Project/mosquitto-2.0.18/src/: CMakeLists.txt
Week2/include/: double_arithmetic.hpp  int_arithmetic.h
Week2/src/: main.c
Week2/src/int_arithmetic/: int_division.c  int_multiply.c
Week3/: CMakeLists.txt  Makefile
Week3/include/: CMakeLists.txt  int_arithmetic.h
Week3/src/: CMakeLists.txt  main
Week3/src/int_arithmetic/: int_division.c  int_multiply.c
Week_12/: CMakeLists.txt
Week_12/lib/: CMakeLists.txt
Week_12/oled_assignment/: CMakeLists.txt
Week_12/src/: CMakeLists.txt
Week_14/temp_assignment/lib/: bmp.h
Week_14/temp_assignment/src/: main.c
Week_2/cmake-app/: CMakeLists.txt
Week_3/src/: CMakeLists.txt
Week_3/src/double_arithmetic/: CMakeLists.txt  double_add.cpp  double_multiply.cpp  double_subtract.cpp
Week_3/src/int_arithmetic/: CMakeLists.txt
Week_4/: CMake.dockerfile  CMakeLists.txt  Makefile  start.sh
Week_4/src/: CMakeLists.txt
Week_4/src/double_arithmetic/: CMakeLists.txt
Week_4/src/int_arithmetic/: CMakeLists.txt
Week_7/Example/: CMakeLists.txt  HowTo.txt  build.py  example  hello.c
Week_7/assignment_4/: tag.txt
Week_7/assignment_4/shared_lib/: Makefile
Week_7/assignment_4/shared_lib/src/: main.c
Week_7/assignment_4/static_lib/: start.sh
Week_7/assignment_4/static_lib/include/: CMakeLists.txt  double_arithmetic.hpp
Week_7/assignment_4/static_lib/src/: main.c
blink/mem_blink/: Makefile  blink.c
cJSON-1.7.17/: milkv_duo.cmake
final_project/: subscriber.c
morse_code_project/: CMakeLists.txt  Makefile  README.md  build.py  hostBuild.py  targetBuild.py
morse_code_project/lib/: CMakeLists.txt  a.out  blink_led.c  blink_led.h  devmem.c  translate_char.c  translate_to_morse.c  translate_to_morse.h
morse_code_project/src/: CMakeLists.txt  main.c
morse_code_project/unity/: CMakeLists.txt  test.c  test.h
(+4 files in other folders)
